// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnChartSpecModel > file URL handling > should handle arrow data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "format": {
      "type": "arrow",
    },
    "values": Uint8Array [
      65,
      82,
      82,
      79,
      87,
      49,
      10,
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "tooltip": [
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date",
            "format": "%Y-%m-%d",
            "title": "date (start)",
            "type": "temporal",
          },
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date_end",
            "format": "%Y-%m-%d",
            "title": "date (end)",
            "type": "temporal",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > should expect bin values to be used for number and integer columns 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "name": "bin_values",
    "values": [
      {
        "bin_end": 10,
        "bin_start": 0,
        "count": 10,
      },
      {
        "bin_end": 20,
        "bin_start": 10,
        "count": 20,
      },
    ],
  },
  "height": 30,
  "layer": [
    {
      "encoding": {
        "opacity": {
          "condition": [
            {
              "param": "hover",
              "value": 1,
            },
          ],
          "value": 0.6,
        },
        "x": {
          "bin": {
            "binned": true,
            "step": 10,
          },
          "field": "bin_start",
          "type": "quantitative",
        },
        "x2": {
          "axis": null,
          "field": "bin_end",
        },
        "y": {
          "axis": null,
          "field": "count",
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "field": "bin_range",
            "title": "number",
            "type": "nominal",
          },
          {
            "field": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
            "values": [
              0,
              100,
            ],
          },
          "bin": {
            "binned": true,
            "step": 10,
          },
          "field": "bin_start",
          "type": "quantitative",
        },
        "x2": {
          "field": "bin_end",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
      "params": [
        {
          "name": "hover",
          "select": {
            "clear": "mouseout",
            "nearest": true,
            "on": "mouseover",
            "type": "point",
          },
        },
      ],
      "transform": [
        {
          "as": "bin_range",
          "calculate": "format(datum.bin_start, '.2f') + ' - ' + format(datum.bin_end, '.2f')",
        },
      ],
    },
  ],
  "width": 70,
}
`;

exports[`ColumnChartSpecModel > should handle boolean stats 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "name": "boolean_values",
    "values": [
      {
        "count": 5,
        "value": "true",
      },
      {
        "count": 5,
        "value": "false",
      },
      {
        "count": 10,
        "value": "null",
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "value",
      "legend": null,
      "scale": {
        "domain": [
          "true",
          "false",
          "null",
        ],
        "range": [
          "#027864",
          "#027864",
          "#cc4e00",
        ],
      },
      "type": "nominal",
    },
    "tooltip": [
      {
        "field": "value",
        "title": "boolean",
        "type": "nominal",
      },
      {
        "field": "count_with_percent",
        "title": "Count",
        "type": "nominal",
      },
    ],
    "x": {
      "axis": null,
      "field": "count",
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
    "y": {
      "axis": {
        "labelColor": "#8b8d98",
        "labelExpr": "datum.label === 'true' || datum.label === 'True'  ? 'True' : datum.label === 'false' || datum.label === 'False' ? 'False' : 'Null'",
        "tickWidth": 0,
        "title": null,
      },
      "field": "value",
      "scale": {
        "paddingInner": 1,
      },
      "sort": [
        "true",
        "false",
        "null",
      ],
      "type": "nominal",
    },
  },
  "height": 100,
  "layer": [
    {
      "mark": {
        "color": "#027864",
        "height": 11,
        "type": "bar",
      },
    },
    {
      "encoding": {
        "text": {
          "field": "count",
          "format": ",d",
          "type": "quantitative",
        },
      },
      "mark": {
        "align": "left",
        "baseline": "middle",
        "color": "#8b8d98",
        "dx": 3,
        "type": "text",
      },
    },
  ],
  "mark": {
    "color": "#027864",
    "type": "bar",
  },
  "transform": [
    {
      "as": "count_with_percent",
      "calculate": "format(datum.count, ',d') + ' (' + format(datum.count / 20 * 100, '.1f') + '%)'",
    },
  ],
}
`;

exports[`ColumnChartSpecModel > should handle datetime bin values 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "name": "bin_values",
    "values": [
      {
        "bin_end": "2023-01-02",
        "bin_start": "2023-01-01",
        "count": 10,
      },
      {
        "bin_end": "2023-01-03",
        "bin_start": "2023-01-02",
        "count": 20,
      },
      {
        "bin_end": null,
        "bin_start": null,
        "count": 10,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum['bin_start'] === null && datum['bin_end'] === null",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "opacity": {
          "condition": [
            {
              "param": "hover",
              "value": 1,
            },
          ],
          "value": 0.6,
        },
        "x": {
          "axis": null,
          "field": "bin_start",
          "type": "ordinal",
        },
        "y": {
          "axis": null,
          "field": "count",
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
      "params": [
        {
          "name": "hover",
          "select": {
            "clear": "mouseout",
            "on": "mouseover",
            "type": "point",
          },
        },
      ],
    },
    {
      "encoding": {
        "tooltip": [
          {
            "field": "bin_start",
            "timeUnit": "yearmonthdate",
            "title": "datetime (start)",
            "type": "temporal",
          },
          {
            "field": "bin_end",
            "timeUnit": "yearmonthdate",
            "title": "datetime (end)",
            "type": "temporal",
          },
          {
            "field": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "field": "bin_start",
          "type": "ordinal",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
        "width": {
          "band": 1.2,
        },
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > should handle string value counts 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "name": "value_counts",
    "values": [
      {
        "count": 10,
        "proportion": 0.25,
        "value": "A",
        "xEnd": 10,
        "xMid": 5,
        "xStart": 0,
      },
      {
        "count": 30,
        "proportion": 0.75,
        "value": "B",
        "xEnd": 40,
        "xMid": 25,
        "xStart": 10,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum.value == "None" || datum.value == "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "opacity": {
          "condition": [
            {
              "param": "hover_bar",
              "value": 1,
            },
          ],
          "value": 0.6,
        },
        "tooltip": [
          {
            "field": "value",
            "title": "string",
            "type": "nominal",
          },
          {
            "field": "count_with_percent",
            "title": "Count",
            "type": "nominal",
          },
        ],
        "x": {
          "axis": null,
          "field": "xStart",
          "type": "quantitative",
        },
        "x2": {
          "field": "xEnd",
          "type": "quantitative",
        },
      },
      "mark": {
        "type": "bar",
      },
      "params": [
        {
          "name": "hover_bar",
          "select": {
            "clear": "mouseout",
            "on": "mouseover",
            "type": "point",
          },
        },
      ],
      "transform": [
        {
          "as": "count_with_percent",
          "calculate": "format(datum.count, ',d') + ' (' + format(datum.count / 40 * 100, '.1f') + '%)'",
        },
      ],
    },
    {
      "encoding": {
        "text": {
          "field": "clipped_text",
        },
        "x": {
          "axis": null,
          "field": "xMid",
          "type": "quantitative",
        },
      },
      "mark": {
        "clip": true,
        "color": "white",
        "ellipsis": " ",
        "fontSize": 8.5,
        "type": "text",
      },
      "transform": [
        {
          "as": "clipped_text",
          "calculate": "datum.proportion > 0.5 ? slice(datum.value, 0, 8) : datum.proportion > 0.2 ? slice(datum.value, 0, 3) : datum.proportion > 0.1 ? slice(datum.value, 0, 1) : ''",
        },
      ],
    },
  ],
  "transform": [
    {
      "as": "percent",
      "calculate": "datum.count / 40",
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > array 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      "a",
      "b",
      "c",
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > csv data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > csv string 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > url data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "tooltip": [
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date",
            "format": "%Y-%m-%d",
            "title": "date (start)",
            "type": "temporal",
          },
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date_end",
            "format": "%Y-%m-%d",
            "title": "date (end)",
            "type": "temporal",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot with legacy data spec > array 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      "a",
      "b",
      "c",
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot with legacy data spec > csv data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot with legacy data spec > csv string 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "x": {
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": {
            "labelExpr": "(datum.value >= 10000 || datum.value <= -10000) ? format(datum.value, '.2e') : format(datum.value, '.2~f')",
            "labelFontSize": 8.5,
            "labelOpacity": 0.5,
            "title": null,
          },
          "bin": true,
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot with legacy data spec > url data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
    },
    {
      "encoding": {
        "color": {
          "condition": {
            "test": "datum["bin_maxbins_10_date_range"] === "null"",
            "value": "#cc4e00",
          },
          "value": "#027864",
        },
        "tooltip": [
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date",
            "format": "%Y-%m-%d",
            "title": "date (start)",
            "type": "temporal",
          },
          {
            "bin": {
              "binned": true,
            },
            "field": "bin_maxbins_10_date_end",
            "format": "%Y-%m-%d",
            "title": "date (end)",
            "type": "temporal",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": true,
          "field": "date",
          "scale": {
            "align": 0,
            "paddingInner": 0,
            "paddingOuter": {
              "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
            },
          },
          "type": "temporal",
        },
        "y": {
          "aggregate": "max",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "opacity": 0,
        "type": "bar",
      },
    },
  ],
}
`;
